--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@ body {
   overflow-x: hidden;
 }
 
-/* ================= STITCH (|-|-) ================= */
+/* ================= STITCH ================= */
 
-.stitch-line {
+.stitch {
   height: 24px;
   position: relative;
   background: #090708;
 }
 
-.stitch-line::before {
+.stitch::before {
   content: "";
   position: absolute;
   top: 50%;
@@ -37,7 +37,7 @@ body {
   transform: translateY(-50%);
 }
 
-.stitch-line::after {
+.stitch::after {
   content: "";
   position: absolute;
   inset: 0;
@@ -50,7 +50,7 @@ body {
   );
 }
 
-.bottom-stitch {
+.stitch.bottom {
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -62,7 +62,266 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 22px 30px;
+  padding: 24px 32px;
+}
+
+.menu {
+  font-size: 26px;
+  cursor: pointer;
+}
+
+.logo img {
+  height: 90px;
+  display: block;
+}
+
+.header-icons {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+.heart {
+  font-size: 22px;
+  cursor: pointer;
+}
+
+/* CART */
+
+.cart {
+  width: 24px;
+  height: 18px;
+  border: 2px solid #f2f2f2;
+  border-radius: 4px;
+  position: relative;
+  cursor: pointer;
+}
+
+.cart::before {
+  content: "";
+  position: absolute;
+  width: 14px;
+  height: 8px;
+  border: 2px solid #f2f2f2;
+  border-bottom: none;
+  border-radius: 12px 12px 0 0;
+  top: -10px;
+  left: 3px;
+}
+
+/* ================= SIDEBAR ================= */
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.55);
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.3s ease;
+  z-index: 5;
+}
+
+.overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 260px;
+  height: 100%;
+  background: #0f0c0c;
+  padding: 30px 20px;
+  transform: translateX(-100%);
+  transition: transform 0.4s ease;
+  z-index: 10;
+}
+
+.sidebar.active {
+  transform: translateX(0);
+}
+
+.sidebar .close {
+  font-size: 26px;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+/* SEARCH BAR */
+
+.search {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 30px;
+  background: #090708;
+  border: 1px solid #333;
+  color: #f2f2f2;
+  outline: none;
+}
+
+.search::placeholder {
+  color: #666;
+}
+
+.sidebar a {
+  display: block;
+  padding: 14px 0;
+  color: #f2f2f2;
+  text-decoration: none;
+  border-bottom: 1px solid #f2f2f2;
+  letter-spacing: 2px;
+}
+
+/* ================= BOXES ================= */
+
+.hero-box {
+  height: 70vh;
+  background: #0e0a0a;
+}
+
+.second-box {
+  height: 50vh;
+  background: #0c0909;
+}
+
+/* ================= COUNTER ================= */
+
+.counter {
+  text-align: center;
+  padding: 28px;
+  letter-spacing: 2px;
+}
+
+/* ================= FOOTER ================= */
+
+footer {
+  padding: 40px 32px 100px 32px;
+}
+
+footer a,
+footer .label {
+  display: block;
+  margin: 14px 0;
+  color: #f2f2f2;
+  text-decoration: underline;
+  letter-spacing: 2px;
+}
+
+.social-row {
+  display: flex;
+  gap: 20px;
+  margin-top: 12px;
+}
+
+/* INSTAGRAM */
+
+.instagram {
+  width: 24px;
+  height: 24px;
+  border: 2px solid #f2f2f2;
+  border-radius: 6px;
+  position: relative;
+}
+
+.instagram::before {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border: 2px solid #f2f2f2;
+  border-radius: 50%;
+  top: 5px;
+  left: 5px;
+}
+
+.instagram::after {
+  content: "";
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  background: #f2f2f2;
+  border-radius: 50%;
+  top: 3px;
+  right: 3px;
+}
+</style>
+</head>
+
+<body>
+
+<div class="stitch"></div>
+
+<header>
+  <div class="menu" onclick="openMenu()">☰</div>
+
+  <div class="logo">
+    <img src="unnamed.png" alt="GNAW Logo">
+  </div>
+
+  <div class="header-icons">
+    <div class="heart">♡</div>
+    <div class="cart"></div>
+  </div>
+</header>
+
+<div class="overlay" id="overlay" onclick="closeMenu()"></div>
+
+<div class="sidebar" id="sidebar">
+  <div class="close" onclick="closeMenu()">✕</div>
+
+  <input class="search" type="text" placeholder="Search...">
+
+  <a href="#">Skirts</a>
+  <a href="#">Shorts</a>
+  <a href="#">Tops</a>
+  <a href="#">Accessories</a>
+</div>
+
+<section class="hero-box"></section>
+<section class="second-box"></section>
+
+<div class="counter">
+  <span id="count">247</span> pieces saved from landfills
+</div>
+
+<footer>
+  <a href="about.html">About Us</a>
+  <a href="#">Contact</a>
+  <a href="#">FAQ</a>
+
+  <div class="label">Socials</div>
+  <div class="social-row">
+    <div class="instagram"></div>
+  </div>
+</footer>
+
+<div class="stitch bottom"></div>
+
+<script>
+const sidebar = document.getElementById("sidebar");
+const overlay = document.getElementById("overlay");
+
+function openMenu() {
+  sidebar.classList.add("active");
+  overlay.classList.add("active");
+}
+
+function closeMenu() {
+  sidebar.classList.remove("active");
+  overlay.classList.remove("active");
+}
+
+let count = 247;
+setInterval(() => {
+  count++;
+  document.getElementById("count").textContent = count;
+}, 3000);
+</script>
+
+</body>
+</html>  padding: 22px 30px;
 }
 
 .menu {
