--- a/index.html
+++ b/index.html
@@ -5,552 +5,116 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>GNAW</title>
 
+<link href="https://fonts.googleapis.com/css2?family=Eater&display=swap" rel="stylesheet">
+
 <style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
+/* ===== BASE ===== */
 body {
+  margin: 0;
   background: #090708;
-  color: #f2f2f2;
-  font-family: Arial, sans-serif;
-  overflow-x: hidden;
+  color: white;
+  font-family: 'Eater', cursive;
 }
 
-/* ================= STITCH ================= */
-
-.stitch {
-  height: 24px;
-  position: relative;
-  background: #090708;
+a {
+  text-decoration: none;
+  color: white;
 }
 
-.stitch::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  height: 2px;
-  background: #f2f2f2;
-  transform: translateY(-50%);
-}
-
-.stitch::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background: repeating-linear-gradient(
-    90deg,
-    transparent 0px,
-    transparent 20px,
-    #f2f2f2 20px,
-    #f2f2f2 22px
-  );
-}
-
-.stitch.bottom {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-/* ================= HEADER ================= */
-
-header {
+/* ===== NAV ===== */
+nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 24px 32px;
+  padding: 20px 40px;
 }
 
-.menu {
-  font-size: 26px;
-  cursor: pointer;
+.logo {
+  font-size: 28px;
 }
 
-.logo img {
-  height: 90px;
-  display: block;
-}
-
-.header-icons {
+.nav-right {
   display: flex;
   align-items: center;
-  gap: 24px;
-}
-
-.heart {
-  font-size: 22px;
-  cursor: pointer;
-}
-
-/* CART */
-
-.cart {
-  width: 24px;
-  height: 18px;
-  border: 2px solid #f2f2f2;
-  border-radius: 4px;
-  position: relative;
-  cursor: pointer;
-}
-
-.cart::before {
-  content: "";
-  position: absolute;
-  width: 14px;
-  height: 8px;
-  border: 2px solid #f2f2f2;
-  border-bottom: none;
-  border-radius: 12px 12px 0 0;
-  top: -10px;
-  left: 3px;
-}
-
-/* ================= SIDEBAR ================= */
-
-.overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.55);
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.3s ease;
-  z-index: 5;
-}
-
-.overlay.active {
-  opacity: 1;
-  pointer-events: all;
-}
-
-.sidebar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 260px;
-  height: 100%;
-  background: #0f0c0c;
-  padding: 30px 20px;
-  transform: translateX(-100%);
-  transition: transform 0.4s ease;
-  z-index: 10;
-}
-
-.sidebar.active {
-  transform: translateX(0);
-}
-
-.sidebar .close {
-  font-size: 26px;
-  margin-bottom: 20px;
-  cursor: pointer;
-}
-
-/* SEARCH BAR */
-
-.search {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 30px;
-  background: #090708;
-  border: 1px solid #333;
-  color: #f2f2f2;
-  outline: none;
-}
-
-.search::placeholder {
-  color: #666;
-}
-
-.sidebar a {
-  display: block;
-  padding: 14px 0;
-  color: #f2f2f2;
-  text-decoration: none;
-  border-bottom: 1px solid #f2f2f2;
-  letter-spacing: 2px;
-}
-
-/* ================= BOXES ================= */
-
-.hero-box {
-  height: 70vh;
-  background: #0e0a0a;
-}
-
-.second-box {
-  height: 50vh;
-  background: #0c0909;
-}
-
-/* ================= COUNTER ================= */
-
-.counter {
-  text-align: center;
-  padding: 28px;
-  letter-spacing: 2px;
-}
-
-/* ================= FOOTER ================= */
-
-footer {
-  padding: 40px 32px 100px 32px;
-}
-
-footer a,
-footer .label {
-  display: block;
-  margin: 14px 0;
-  color: #f2f2f2;
-  text-decoration: underline;
-  letter-spacing: 2px;
-}
-
-.social-row {
-  display: flex;
   gap: 20px;
-  margin-top: 12px;
 }
 
-/* INSTAGRAM */
-
-.instagram {
-  width: 24px;
-  height: 24px;
-  border: 2px solid #f2f2f2;
-  border-radius: 6px;
-  position: relative;
-}
-
-.instagram::before {
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  border: 2px solid #f2f2f2;
-  border-radius: 50%;
-  top: 5px;
-  left: 5px;
-}
-
-.instagram::after {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 4px;
-  background: #f2f2f2;
-  border-radius: 50%;
-  top: 3px;
-  right: 3px;
-}
-</style>
-</head>
-
-<body>
-
-<div class="stitch"></div>
-
-<header>
-  <div class="menu" onclick="openMenu()">☰</div>
-
-  <div class="logo">
-    <img src="unnamed.png" alt="GNAW Logo">
-  </div>
-
-  <div class="header-icons">
-    <div class="heart">♡</div>
-    <div class="cart"></div>
-  </div>
-</header>
-
-<div class="overlay" id="overlay" onclick="closeMenu()"></div>
-
-<div class="sidebar" id="sidebar">
-  <div class="close" onclick="closeMenu()">✕</div>
-
-  <input class="search" type="text" placeholder="Search...">
-
-  <a href="#">Skirts</a>
-  <a href="#">Shorts</a>
-  <a href="#">Tops</a>
-  <a href="#">Accessories</a>
-</div>
-
-<section class="hero-box"></section>
-<section class="second-box"></section>
-
-<div class="counter">
-  <span id="count">247</span> pieces saved from landfills
-</div>
-
-<footer>
-  <a href="about.html">About Us</a>
-  <a href="#">Contact</a>
-  <a href="#">FAQ</a>
-
-  <div class="label">Socials</div>
-  <div class="social-row">
-    <div class="instagram"></div>
-  </div>
-</footer>
-
-<div class="stitch bottom"></div>
-
-<script>
-const sidebar = document.getElementById("sidebar");
-const overlay = document.getElementById("overlay");
-
-function openMenu() {
-  sidebar.classList.add("active");
-  overlay.classList.add("active");
-}
-
-function closeMenu() {
-  sidebar.classList.remove("active");
-  overlay.classList.remove("active");
-}
-
-let count = 247;
-setInterval(() => {
-  count++;
-  document.getElementById("count").textContent = count;
-}, 3000);
-</script>
-
-</body>
-</html>  padding: 22px 30px;
-}
-
-.menu {
-  font-size: 26px;
-  cursor: pointer;
-}
-
-.logo img {
-  height: 85px;
-  display: block;
-}
-
-.header-icons {
-  display: flex;
-  align-items: center;
-  gap: 22px;
-}
-
-/* Heart */
-.heart {
-  font-size: 22px;
-  cursor: pointer;
-}
-
-/* Cart */
-.cart {
-  width: 22px;
-  height: 18px;
-  border: 2px solid #f2f2f2;
-  border-radius: 3px;
-  position: relative;
-  cursor: pointer;
-}
-
-.cart::before {
-  content: "";
-  position: absolute;
-  width: 12px;
-  height: 8px;
-  border: 2px solid #f2f2f2;
-  border-bottom: none;
-  border-radius: 10px 10px 0 0;
-  top: -10px;
-  left: 3px;
-}
-
-/* ================= SIDEBAR ================= */
-
-.overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.55);
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.3s ease;
-  z-index: 5;
-}
-
-.overlay.active {
-  opacity: 1;
-  pointer-events: all;
-}
-
-.sidebar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 260px;
-  height: 100%;
-  background: #0f0c0c;
-  padding: 30px 20px;
-  transform: translateX(-100%);
-  transition: transform 0.4s ease;
-  z-index: 10;
-}
-
-.sidebar.active {
-  transform: translateX(0);
-}
-
-.sidebar .close {
-  font-size: 26px;
-  margin-bottom: 30px;
-  cursor: pointer;
-}
-
-.sidebar a {
-  display: block;
-  padding: 14px 0;
-  color: #f2f2f2;
-  text-decoration: none;
-  border-bottom: 1px solid #f2f2f2;
-  letter-spacing: 2px;
-}
-
-/* ================= HERO BOX ================= */
-
-.hero-box {
-  height: 70vh;
-  background: #0e0a0a;
-}
-
-/* ================= COUNTER ================= */
-
-.counter {
-  text-align: center;
-  padding: 25px;
-  letter-spacing: 2px;
-}
-
-/* ================= FOOTER ================= */
-
-footer {
-  padding: 40px 30px 100px 30px;
-}
-
-footer a,
-footer .label {
-  display: block;
-  margin: 14px 0;
-  color: #f2f2f2;
-  text-decoration: underline;
-  letter-spacing: 2px;
-}
-
-.social-row {
-  display: flex;
-  gap: 18px;
-  margin-top: 10px;
-}
-
-/* Instagram */
-.instagram {
+.icon {
   width: 22px;
   height: 22px;
-  border: 2px solid #f2f2f2;
-  border-radius: 6px;
-  position: relative;
+  cursor: pointer;
 }
 
-.instagram::before {
-  content: "";
-  position: absolute;
-  width: 8px;
-  height: 8px;
-  border: 2px solid #f2f2f2;
-  border-radius: 50%;
-  top: 5px;
-  left: 5px;
+/* ===== PAGE SECTIONS ===== */
+.page {
+  display: none;
+  padding: 60px 40px;
 }
 
-.instagram::after {
-  content: "";
-  position: absolute;
-  width: 4px;
-  height: 4px;
-  background: #f2f2f2;
-  border-radius: 50%;
-  top: 3px;
-  right: 3px;
+.page.active {
+  display: block;
 }
+
+h1 {
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+
 </style>
 </head>
 
 <body>
 
-<div class="stitch-line"></div>
+<nav>
+  <div class="logo">GNAW</div>
 
-<header>
-  <div class="menu" onclick="openMenu()">☰</div>
+  <div class="nav-right">
+    
+    <!-- Instagram SVG -->
+    <a href="https://instagram.com" target="_blank">
+      <svg class="icon" viewBox="0 0 24 24" fill="white">
+        <path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm5 5.2A4.8 4.8 0 1 1 7.2 12 4.8 4.8 0 0 1 12 7.2zm6.4-.9a1.1 1.1 0 1 1-1.1-1.1 1.1 1.1 0 0 1 1.1 1.1z"/>
+      </svg>
+    </a>
 
-  <div class="logo">
-    <img src="unnamed.png" alt="GNAW Logo">
+    <!-- Shopping Bag SVG -->
+    <svg class="icon" viewBox="0 0 24 24" fill="white">
+      <path d="M6 7V6a6 6 0 0 1 12 0v1h3v14H3V7h3zm2 0h8V6a4 4 0 0 0-8 0v1z"/>
+    </svg>
+
   </div>
+</nav>
 
-  <div class="header-icons">
-    <div class="heart">♡</div>
-    <div class="cart"></div>
-  </div>
-</header>
+<!-- HOME PAGE -->
+<section id="home" class="page active">
+  <h1>Home</h1>
+  <p>Welcome to GNAW.</p>
+</section>
 
-<div class="overlay" id="overlay" onclick="closeMenu()"></div>
-
-<div class="sidebar" id="sidebar">
-  <div class="close" onclick="closeMenu()">✕</div>
-  <a href="#">Skirts</a>
-  <a href="#">Shorts</a>
-  <a href="#">Tops</a>
-  <a href="#">Accessories</a>
-</div>
-
-<section class="hero-box"></section>
-
-<div class="counter">
-  <span id="count">247</span> pieces saved from landfills
-</div>
-
-<footer>
-  <a href="about.html">About Us</a>
-  <a href="#">Contact</a>
-  <a href="#">FAQ</a>
-
-  <div class="label">Socials</div>
-  <div class="social-row">
-    <div class="instagram"></div>
-  </div>
-</footer>
-
-<div class="stitch-line bottom-stitch"></div>
+<!-- ABOUT PAGE -->
+<section id="about" class="page">
+  <h1>About</h1>
+  <p>This is the about page.</p>
+</section>
 
 <script>
-const sidebar = document.getElementById("sidebar");
-const overlay = document.getElementById("overlay");
 
-function openMenu() {
-  sidebar.classList.add("active");
-  overlay.classList.add("active");
+/* ===== PAGE SWITCHING ===== */
+
+function showPage(pageId) {
+  document.querySelectorAll('.page').forEach(page => {
+    page.classList.remove('active');
+  });
+
+  document.getElementById(pageId).classList.add('active');
 }
 
-function closeMenu() {
-  sidebar.classList.remove("active");
-  overlay.classList.remove("active");
-}
+/* LOAD HOME BY DEFAULT */
+document.addEventListener("DOMContentLoaded", function() {
+  showPage("home");
+});
 
-let count = 247;
-setInterval(() => {
-  count++;
-  document.getElementById("count").textContent = count;
-}, 3000);
 </script>
 
 </body>
