--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>GNAW</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Eater&display=swap" rel="stylesheet">
+
+<style>
+
+/* ===== BASE ===== */
 body {
   margin: 0;
-  background: #050505; /* darker black */
+  background: #050505;
   color: #f2f2f2;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
 }
 
-/* TOP + BOTTOM STITCH */
+a {
+  color: #f2f2f2;
+  text-decoration: none;
+}
+
+/* ===== STITCHING ===== */
 .stitch-top,
 .stitch-bottom {
   height: 14px;
   background: repeating-linear-gradient(
     90deg,
     #f2f2f2 0px,
-    #f2f2f2 2px,
-    transparent 2px,
-    transparent 12px
+    #f2f2f2 3px,
+    transparent 3px,
+    transparent 16px
   );
 }
 
@@ -23,9 +40,87 @@ body {
   position: fixed;
   bottom: 0;
   width: 100%;
+  z-index: 5;
 }
 
-/* Vertical stitching */
+/* ===== HEADER ===== */
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 30px;
+}
+
+.logo img {
+  height: 60px;
+}
+
+.icons {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.hamburger,
+.heart {
+  font-size: 24px;
+  cursor: pointer;
+}
+
+/* Bag Icon */
+.bag {
+  width: 22px;
+  height: 22px;
+  border: 2px solid #f2f2f2;
+  border-radius: 4px;
+  position: relative;
+  cursor: pointer;
+}
+
+.bag::before {
+  content: "";
+  position: absolute;
+  width: 12px;
+  height: 8px;
+  border: 2px solid #f2f2f2;
+  border-bottom: none;
+  border-radius: 8px 8px 0 0;
+  top: -8px;
+  left: 3px;
+}
+
+/* ===== SIDEBAR ===== */
+.overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.4);
+  display: none;
+  z-index: 90;
+}
+
+.overlay.active {
+  display: block;
+}
+
+.sidebar {
+  position: fixed;
+  left: -280px;
+  top: 0;
+  width: 260px;
+  height: 100%;
+  background: #0d0d0d;
+  padding: 30px 20px;
+  transition: left 0.4s ease;
+  z-index: 100;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.sidebar.active {
+  left: 0;
+}
+
+/* Vertical stitch */
 .sidebar::after {
   content: "";
   position: absolute;
@@ -36,8 +131,134 @@ body {
   background: repeating-linear-gradient(
     180deg,
     #f2f2f2 0px,
-    #f2f2f2 2px,
-    transparent 2px,
-    transparent 12px
+    #f2f2f2 3px,
+    transparent 3px,
+    transparent 16px
   );
 }
+
+.sidebar .close {
+  font-size: 24px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.sidebar input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 30px;
+  background: #050505;
+  border: 1px solid #333;
+  color: #f2f2f2;
+  box-sizing: border-box;
+}
+
+.sidebar a {
+  display: block;
+  padding: 12px 0;
+  border-bottom: 1px solid #f2f2f2;
+  letter-spacing: 2px;
+}
+
+/* ===== HERO SECTIONS ===== */
+.static-hero {
+  height: 70vh;
+  background: #111;
+}
+
+.counter {
+  text-align: center;
+  padding: 20px;
+  letter-spacing: 2px;
+}
+
+.hero {
+  position: relative;
+  height: 50vh;
+  width: 80%;
+  margin: 40px auto 120px auto;
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #151515;
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+}
+
+.slide:nth-child(2) { background: #1a1a1a; }
+.slide:nth-child(3) { background: #121212; }
+
+.slide.active {
+  opacity: 1;
+}
+
+/* ===== FOOTER ===== */
+.main-footer {
+  padding: 40px 20px 120px 40px;
+}
+
+.main-footer a,
+.main-footer .label {
+  display: block;
+  margin: 12px 0;
+  text-decoration: underline;
+  letter-spacing: 2px;
+}
+
+.social-icons {
+  display: flex;
+  gap: 18px;
+  margin-top: 10px;
+}
+
+/* Instagram outline */
+.instagram {
+  width: 22px;
+  height: 22px;
+  border: 2px solid #f2f2f2;
+  border-radius: 6px;
+  position: relative;
+}
+
+.instagram::before {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border: 2px solid #f2f2f2;
+  border-radius: 50%;
+  top: 5px;
+  left: 5px;
+}
+
+.instagram::after {
+  content: "";
+  position: absolute;
+  width: 3px;
+  height: 3px;
+  background: #f2f2f2;
+  border-radius: 50%;
+  top: 3px;
+  right: 3px;
+}
+
+</style>
+</head>
+
+<body>
+
+<div class="stitch-top"></div>
+
+<header>
+  <div class="hamburger" onclick="openMenu()">☰</div>
+
+  <div class="logo">
+    <img src="mascot.png" alt="GNAW Mascot">
+  </div>
+
+  <div class="icons">
+   
