--- a/index.html
+++ b/index.html
@@ -8,31 +8,24 @@
 <link href="https://fonts.googleapis.com/css2?family=Eater&display=swap" rel="stylesheet">
 
 <style>
-
-/* ===== BASE ===== */
 body {
   margin: 0;
-  background: #050505;
+  background: #0a0a0a;
   color: #f2f2f2;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
 }
 
-a {
-  color: #f2f2f2;
-  text-decoration: none;
-}
-
-/* ===== STITCHING ===== */
+/* TOP + BOTTOM STITCH */
 .stitch-top,
 .stitch-bottom {
   height: 14px;
   background: repeating-linear-gradient(
     90deg,
     #f2f2f2 0px,
-    #f2f2f2 3px,
-    transparent 3px,
-    transparent 16px
+    #f2f2f2 2px,
+    transparent 2px,
+    transparent 8px
   );
 }
 
@@ -40,19 +33,21 @@ a {
   position: fixed;
   bottom: 0;
   width: 100%;
-  z-index: 5;
 }
 
-/* ===== HEADER ===== */
+/* HEADER */
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
+  position: relative;
 }
 
-.logo img {
-  height: 60px;
+.logo {
+  font-family: 'Eater', cursive;
+  font-size: 42px;
+  letter-spacing: 4px;
 }
 
 .icons {
@@ -61,24 +56,27 @@ header {
   align-items: center;
 }
 
-.hamburger,
-.heart {
-  font-size: 24px;
+.hamburger {
+  font-size: 26px;
   cursor: pointer;
 }
 
-/* Bag Icon */
+.heart {
+  font-size: 22px;
+  cursor: pointer;
+}
+
 .bag {
   width: 22px;
   height: 22px;
   border: 2px solid #f2f2f2;
-  border-radius: 4px;
+  border-radius: 3px;
   position: relative;
   cursor: pointer;
 }
 
 .bag::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 12px;
   height: 8px;
@@ -89,7 +87,7 @@ header {
   left: 3px;
 }
 
-/* ===== SIDEBAR ===== */
+/* OVERLAY */
 .overlay {
   position: fixed;
   inset: 0;
@@ -102,13 +100,14 @@ header {
   display: block;
 }
 
+/* SIDEBAR */
 .sidebar {
   position: fixed;
   left: -280px;
   top: 0;
   width: 260px;
   height: 100%;
-  background: #0d0d0d;
+  background: #111;
   padding: 30px 20px;
   transition: left 0.4s ease;
   z-index: 100;
@@ -116,11 +115,7 @@ header {
   overflow: hidden;
 }
 
-.sidebar.active {
-  left: 0;
-}
-
-/* Vertical stitch */
+/* Vertical stitching */
 .sidebar::after {
   content: "";
   position: absolute;
@@ -131,14 +126,18 @@ header {
   background: repeating-linear-gradient(
     180deg,
     #f2f2f2 0px,
-    #f2f2f2 3px,
-    transparent 3px,
-    transparent 16px
+    #f2f2f2 2px,
+    transparent 2px,
+    transparent 8px
   );
 }
 
+.sidebar.active {
+  left: 0;
+}
+
 .sidebar .close {
-  font-size: 24px;
+  font-size: 26px;
   cursor: pointer;
   margin-bottom: 20px;
 }
@@ -147,7 +146,7 @@ header {
   width: 100%;
   padding: 8px;
   margin-bottom: 30px;
-  background: #050505;
+  background: #0a0a0a;
   border: 1px solid #333;
   color: #f2f2f2;
   box-sizing: border-box;
@@ -156,22 +155,27 @@ header {
 .sidebar a {
   display: block;
   padding: 12px 0;
-  border-bottom: 1px solid #f2f2f2;
+  text-decoration: none;
+  color: #f2f2f2;
   letter-spacing: 2px;
+  border-bottom: 1px solid #f2f2f2;
 }
 
-/* ===== HERO SECTIONS ===== */
+/* STATIC HERO */
 .static-hero {
   height: 70vh;
-  background: #111;
+  background: #141414;
 }
 
+/* COUNTER */
 .counter {
   text-align: center;
   padding: 20px;
+  font-size: 16px;
   letter-spacing: 2px;
 }
 
+/* FADE SECTION */
 .hero {
   position: relative;
   height: 50vh;
@@ -184,38 +188,40 @@ header {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #151515;
+  background: #1a1a1a;
   opacity: 0;
   transition: opacity 1.5s ease-in-out;
 }
 
-.slide:nth-child(2) { background: #1a1a1a; }
-.slide:nth-child(3) { background: #121212; }
+.slide:nth-child(2) { background: #151515; }
+.slide:nth-child(3) { background: #181818; }
 
 .slide.active {
   opacity: 1;
 }
 
-/* ===== FOOTER ===== */
+/* MAIN FOOTER MENU */
 .main-footer {
   padding: 40px 20px 120px 40px;
+  text-align: left;
 }
 
 .main-footer a,
 .main-footer .label {
   display: block;
   margin: 12px 0;
+  color: #f2f2f2;
   text-decoration: underline;
   letter-spacing: 2px;
 }
 
+/* Instagram Outline */
 .social-icons {
   display: flex;
   gap: 18px;
   margin-top: 10px;
 }
 
-/* Instagram outline */
 .instagram {
   width: 22px;
   height: 22px;
@@ -245,7 +251,6 @@ header {
   top: 3px;
   right: 3px;
 }
-
 </style>
 </head>
 
@@ -255,10 +260,75 @@ header {
 
 <header>
   <div class="hamburger" onclick="openMenu()">☰</div>
-
-  <div class="logo">
-    <img src="mascot.png" alt="GNAW Mascot">
-  </div>
-
+  <div class="logo">GNAW</div>
   <div class="icons">
-   
+    <div class="heart">♡</div>
+    <div class="bag"></div>
+  </div>
+</header>
+
+<div class="overlay" id="overlay" onclick="closeMenu()"></div>
+
+<div class="sidebar" id="sidebar">
+  <div class="close" onclick="closeMenu()">☰</div>
+  <input type="text" placeholder="Search...">
+  <a href="#">Skirts</a>
+  <a href="#">Shorts</a>
+  <a href="#">Tops</a>
+  <a href="#">Accessories</a>
+</div>
+
+<section class="static-hero"></section>
+
+<div class="counter">
+  <span id="count">247</span> pieces saved from landfills
+</div>
+
+<section class="hero">
+  <div class="slide active"></div>
+  <div class="slide"></div>
+  <div class="slide"></div>
+</section>
+
+<div class="main-footer">
+  <a href="about.html">About Us</a>
+  <a href="#">Contact</a>
+  <a href="#">FAQ</a>
+
+  <div class="label">Socials</div>
+  <div class="social-icons">
+    <div class="instagram"></div>
+  </div>
+</div>
+
+<div class="stitch-bottom"></div>
+
+<script>
+function openMenu() {
+  document.getElementById("sidebar").classList.add("active");
+  document.getElementById("overlay").classList.add("active");
+}
+
+function closeMenu() {
+  document.getElementById("sidebar").classList.remove("active");
+  document.getElementById("overlay").classList.remove("active");
+}
+
+const slides = document.querySelectorAll(".slide");
+let current = 0;
+
+setInterval(() => {
+  slides[current].classList.remove("active");
+  current = (current + 1) % slides.length;
+  slides[current].classList.add("active");
+}, 4000);
+
+let count = 247;
+setInterval(() => {
+  count++;
+  document.getElementById("count").textContent = count;
+}, 3000);
+</script>
+
+</body>
+</html>
