--- a/index.html
+++ b/index.html
@@ -10,21 +10,50 @@
 <style>
 body {
   margin: 0;
-  background: #0a0a0a;
+  background: #080607;
   color: #f2f2f2;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
 }
 
-/* ================= STITCHING ================= */
+/* ================= HAND DRAWN STITCH ================= */
 
 .stitch-top,
 .stitch-bottom {
-  height: 16px;
-  background:
-    linear-gradient(#f2f2f2, #f2f2f2) 0 0 / 2px 100% repeat-x,
-    linear-gradient(#f2f2f2, #f2f2f2) 6px 0 / 8px 2px repeat-x;
-  background-color: #0a0a0a;
+  position: relative;
+  height: 28px;
+  background: #080607;
+}
+
+.stitch-top::before,
+.stitch-bottom::before {
+  content: "";
+  position: absolute;
+  top: 14px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #f2f2f2;
+  transform: rotate(-0.4deg);
+  opacity: 0.9;
+}
+
+.stitch-top::after,
+.stitch-bottom::after {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: 0;
+  width: 100%;
+  height: 20px;
+  background: repeating-linear-gradient(
+    to right,
+    transparent 0px,
+    transparent 30px,
+    #f2f2f2 30px,
+    #f2f2f2 32px
+  );
+  opacity: 0.9;
 }
 
 .stitch-bottom {
@@ -43,7 +72,7 @@ header {
 }
 
 .logo img {
-  height: 80px;
+  height: 85px;
   width: auto;
   display: block;
 }
@@ -107,25 +136,37 @@ header {
   top: 0;
   width: 260px;
   height: 100%;
-  background: #111;
+  background: #080607;
   padding: 30px 20px;
   transition: left 0.4s ease;
   z-index: 100;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
-/* Vertical stitch */
+.sidebar::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 14px;
+  width: 2px;
+  height: 100%;
+  background: #f2f2f2;
+}
+
 .sidebar::after {
   content: "";
   position: absolute;
   top: 0;
   right: 0;
-  width: 16px;
+  width: 28px;
   height: 100%;
-  background:
-    linear-gradient(#f2f2f2, #f2f2f2) 0 0 / 100% 2px repeat-y,
-    linear-gradient(#f2f2f2, #f2f2f2) 0 6px / 2px 8px repeat-y;
+  background: repeating-linear-gradient(
+    to bottom,
+    transparent 0px,
+    transparent 30px,
+    #f2f2f2 30px,
+    #f2f2f2 32px
+  );
 }
 
 .sidebar.active {
@@ -142,10 +183,9 @@ header {
   width: 100%;
   padding: 8px;
   margin-bottom: 30px;
-  background: #0a0a0a;
+  background: #080607;
   border: 1px solid #333;
   color: #f2f2f2;
-  box-sizing: border-box;
 }
 
 .sidebar a {
@@ -157,175 +197,6 @@ header {
   border-bottom: 1px solid #f2f2f2;
 }
 
-/* ================= HERO ================= */
+/* ================= CONTENT ================= */
 
 .static-hero {
-  height: 70vh;
-  background: #141414;
-}
-
-.counter {
-  text-align: center;
-  padding: 20px;
-  font-size: 16px;
-  letter-spacing: 2px;
-}
-
-.hero {
-  position: relative;
-  height: 50vh;
-  width: 80%;
-  margin: 40px auto 120px auto;
-  overflow: hidden;
-}
-
-.slide {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #1a1a1a;
-  opacity: 0;
-  transition: opacity 1.5s ease-in-out;
-}
-
-.slide:nth-child(2) { background: #151515; }
-.slide:nth-child(3) { background: #181818; }
-
-.slide.active {
-  opacity: 1;
-}
-
-/* ================= FOOTER ================= */
-
-.main-footer {
-  padding: 40px 20px 120px 40px;
-  text-align: left;
-}
-
-.main-footer a,
-.main-footer .label {
-  display: block;
-  margin: 12px 0;
-  color: #f2f2f2;
-  text-decoration: underline;
-  letter-spacing: 2px;
-}
-
-.social-icons {
-  display: flex;
-  gap: 18px;
-  margin-top: 10px;
-}
-
-.instagram {
-  width: 22px;
-  height: 22px;
-  border: 2px solid #f2f2f2;
-  border-radius: 6px;
-  position: relative;
-}
-
-.instagram::before {
-  content: "";
-  position: absolute;
-  width: 8px;
-  height: 8px;
-  border: 2px solid #f2f2f2;
-  border-radius: 50%;
-  top: 5px;
-  left: 5px;
-}
-
-.instagram::after {
-  content: "";
-  position: absolute;
-  width: 3px;
-  height: 3px;
-  background: #f2f2f2;
-  border-radius: 50%;
-  top: 3px;
-  right: 3px;
-}
-</style>
-</head>
-
-<body>
-
-<div class="stitch-top"></div>
-
-<header>
-  <div class="hamburger" onclick="openMenu()">☰</div>
-  <div class="logo">
-    <img src="unnamed.png" alt="Logo">
-  </div>
-  <div class="icons">
-    <div class="heart">♡</div>
-    <div class="bag"></div>
-  </div>
-</header>
-
-<div class="overlay" id="overlay" onclick="closeMenu()"></div>
-
-<div class="sidebar" id="sidebar">
-  <div class="close" onclick="closeMenu()">☰</div>
-  <input type="text" placeholder="Search...">
-  <a href="#">Skirts</a>
-  <a href="#">Shorts</a>
-  <a href="#">Tops</a>
-  <a href="#">Accessories</a>
-</div>
-
-<section class="static-hero"></section>
-
-<div class="counter">
-  <span id="count">247</span> pieces saved from landfills
-</div>
-
-<section class="hero">
-  <div class="slide active"></div>
-  <div class="slide"></div>
-  <div class="slide"></div>
-</section>
-
-<div class="main-footer">
-  <a href="about.html">About Us</a>
-  <a href="#">Contact</a>
-  <a href="#">FAQ</a>
-
-  <div class="label">Socials</div>
-  <div class="social-icons">
-    <div class="instagram"></div>
-  </div>
-</div>
-
-<div class="stitch-bottom"></div>
-
-<script>
-function openMenu() {
-  document.getElementById("sidebar").classList.add("active");
-  document.getElementById("overlay").classList.add("active");
-}
-
-function closeMenu() {
-  document.getElementById("sidebar").classList.remove("active");
-  document.getElementById("overlay").classList.remove("active");
-}
-
-const slides = document.querySelectorAll(".slide");
-let current = 0;
-
-setInterval(() => {
-  slides[current].classList.remove("active");
-  current = (current + 1) % slides.length;
-  slides[current].classList.add("active");
-}, 4000);
-
-let count = 247;
-setInterval(() => {
-  count++;
-  document.getElementById("count").textContent = count;
-}, 3000);
-</script>
-
-</body>
-</html>
