--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 body {
   margin: 0;
   background: #0a0a0a;
-  color: #080607
+  color: #f2f2f2;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
 }
